# bert-text-classification

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
configs/: config.yaml
deployment/: Dockerfile  api.py  requirements.txt
reports/: classification_report.txt
src/: create_manifest.py  data_preparation.py  evaluate.py  inference.py  train.py
tests/: test_config.py
